# hass-addon-pvs-recorder

./: .gitignore  Dockerfile  README.md  config.yaml  ess_devices.json  hass_entry.sh  pvs_recorder.py  pyproject.toml  query_modbus.py  query_pvs_details.py  query_pvs_ws.py  repository.json  ws_example.json
ess/: __init__.py
ess/devices/: __init__.py  bms.py  gateway.py  gateway503.py  inverter.py  inverter503.py
ess/modbus/: __init__.py  decoder.py  encoder.py
mqtt/: __init__.py
pvs/: __init__.py  pvs_detail.py  pvs_websocket.py
pvs_proxy/: docker-compose.yaml
pvs_proxy/nginx/: nginx.conf
pvs_proxy/scripts/: generate-config.sh
recorder/: __init__.py
